# rayer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: camera.rs  color.rs  lib.rs  main.rs  random.rs  ray.rs  types.rs
src/color/: binned_spectrum.rs  cie_1931.rs  mod.rs  rgb_base_colors.rs
src/hitable/: bvh.rs  class.rs  hitable_list.rs  instance.rs  mod.rs  sphere.rs  triangle.rs
src/material/: light.rs  mod.rs
src/texture/: mod.rs
