[package]
name = "rayer"
version = "0.1.0"
authors = ["Timo von Holtz <tvh@tvholtz.de>"]

[profile.release]
debug = true

[dependencies]
arrayvec = "0.4.10"
clap = "2.33.0"
cpuprofiler = "0.0.3"
crossbeam-channel = "0.3.8"
decorum = "0.1.3"
euclid = "0.19.9"
image = "0.21.2"
lazy_static = "1.3.0"
num-traits = "0.2.8"
obj = "0.9.0"
palette = { git = "https://github.com/Ogeon/palette.git", rev = "c5114e5" }
pbr = "1.0.1"
pdqselect = "0.1.0"
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand = "0.7.0"
rand_xorshift = "0.2.0"
rand_xoshiro = "0.3.0"
rayon = "1.1.0"
packed_simd = "0.3.3"
tempfile = "3.1.0"
