[package]
name = "rayer"
version = "0.1.0"
authors = ["Timo von Holtz <tvh@tvholtz.de>"]

[profile.release]
debug = true

[dependencies]
arrayvec = "0.4.10"
clap = "3.1.7"
cpuprofiler = "0.0.4"
crossbeam-channel = "0.5.4"
decorum = "0.1.3"
euclid = "0.19.9"
image = "0.24.1"
lazy_static = "1.3.0"
num-traits = "0.2.8"
obj = "0.9.0"
palette = { git = "https://github.com/Ogeon/palette.git", rev = "c5114e5" }
pbr = "1.0.1"
pdqselect = "0.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.7.0"
rand_xorshift = "0.2.0"
rand_xoshiro = "0.3.0"
rayon = "1.1.0"
core_simd = { git = "https://github.com/rust-lang/portable-simd", rev = "0711e11" }
tempfile = "3.1.0"
